--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Mothers and daughters -- Fiction'
 - !lcsh 'Women authors -- Fiction'
+- GITenberg
 title: 'I divoratori: romanzo'
 url: http://www.gutenberg.org/ebooks/34983
